--- a/index.html
+++ b/index.html
@@ -14,31 +14,43 @@
 
 
   <style>
-    /* Sidebar styling */
-    #sidebar {
-      background: #f9f9f9;
-      border-radius: 4px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      padding: 1rem;
-      font-family: 'Segoe UI', Tahoma, sans-serif;
-      color: #333;
-      line-height: 1.4;
+    /* Tab bar */
+    #county-tabs { margin-bottom:1rem; }
+    #county-tabs button {
+      margin-right:.5rem; padding:.5rem 1rem; border:none;
+      background:#ddd; border-radius:4px; cursor:pointer;
     }
-    #sidebar h4 {
-      margin-top: 0;
-      color: #0074D9;
-      font-size: 1.25rem;
+    #county-tabs button.active { background:#0074D9; color:#fff; }
+
+    /* Sidebar */
+    #sidebar { background:#f9f9f9; border-radius:4px;
+      box-shadow:0 2px 8px rgba(0,0,0,0.1); padding:1rem;
+      font-family:'Segoe UI', Tahoma, sans-serif; color:#333; line-height:1.4;
     }
-    #sidebar p {
-      margin: 0.5rem 0;
-      font-size: 0.9rem;
+    #sidebar h4 { margin-top:0; color:#0074D9; font-size:1.25rem; }
+    #sidebar p { margin:.5rem 0; font-size:.9rem; }
+
+    /* Search controls */
+    #search-toggle { position:absolute; top:10px; right:10px;
+      width:36px; height:36px; background:white; border-radius:50%;
+      box-shadow:0 2px 6px rgba(0,0,0,0.2);
+      display:flex; align-items:center; justify-content:center;
+      cursor:pointer; z-index:1000;
     }
-    /* Search input focus */
-    #org-search:focus {
-      outline: none;
-      border-color: #0074D9;
-      box-shadow: 0 0 4px rgba(0,116,217,0.5);
+    #org-search { position:absolute; top:10px; right:56px;
+      width:0; opacity:0; padding:6px 12px;
+      border:1px solid #ccc; border-radius:4px;
+      transition:width .3s ease, opacity .3s ease;
+      z-index:1000;
     }
+    #search-results { position:absolute; top:50px; right:10px;
+      background:white; max-height:200px; overflow:auto;
+      border:1px solid #ccc; border-radius:4px;
+      box-shadow:0 2px 6px rgba(0,0,0,0.2);
+      display:none; z-index:1000;
+    }
+    #search-results div { padding:.3rem; cursor:pointer; }
+    #search-results div:hover { background:#f0f0f0; }
   </style>
 </head>
 <body>
@@ -137,32 +149,29 @@
   </div>
 
   <!-- Leaflet Map Section -->
-  <div class="w3-container w3-padding-32" id="map-section">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Leaflet Map</h3>
+  <div id="county-tabs">
+    <button data-county="county1" class="active">County1</button>
+    <button data-county="county2">County2</button>
+    <button data-county="county3">County3</button>
+  </div>
 
-    <div style="display:flex; gap:1rem;">
-      <!-- Sidebar -->
-      <div id="sidebar" style="width:30%; min-width:200px; max-height:500px; overflow-y:auto;">
-        <p><em>Click a marker on the map → its name will go here.</em></p>
-      </div>
-      <!-- Map + controls -->
-      <div id="map-wrapper" style="position:relative; width:70%;">
-        <div id="map" style="width:100%; height:500px; border:1px solid #ccc;"></div>
-        <!-- Search toggle -->
-        <div id="search-toggle" style="position:absolute; top:10px; right:10px; width:36px; height:36px; background:white; border-radius:50%; box-shadow:0 2px 6px rgba(0,0,0,0.2); display:flex; align-items:center; justify-content:center; cursor:pointer; z-index:1000;">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
-            <circle cx="10" cy="10" r="8" stroke="#333" stroke-width="2" fill="none"/>
-            <line x1="15" y1="15" x2="22" y2="22" stroke="#333" stroke-width="2"/>
-          </svg>
-        </div>
-        <!-- Hidden search input -->
-        <input type="text" id="org-search" placeholder="Search…" style="position:absolute; top:10px; right:56px; width:0; opacity:0; padding:6px 12px; border:1px solid #ccc; border-radius:4px; transition:width 0.3s ease, opacity 0.3s ease; z-index:1000;" />
-        <!-- Results dropdown -->
-        <div id="search-results" style="position:absolute; top:50px; right:10px; background:white; max-height:200px; overflow:auto; border:1px solid #ccc; border-radius:4px; box-shadow:0 2px 6px rgba(0,0,0,0.2); display:none; z-index:1000;"></div>
-      </div>
-
-      
+  <!-- Map + Sidebar -->
+  <div style="display:flex; gap:1rem;">
+    <div id="sidebar" style="width:30%; min-width:200px; max-height:500px; overflow-y:auto;">
+      <p><em>Click a marker on the map → its name will go here.</em></p>
     </div>
+    <div id="map-wrapper" style="position:relative; width:70%;">
+      <div id="map" style="width:100%; height:500px; border:1px solid #ccc;"></div>
+      <div id="search-toggle">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
+          <circle cx="10" cy="10" r="8" stroke="#333" stroke-width="2" fill="none"/>
+          <line x1="15" y1="15" x2="22" y2="22" stroke="#333" stroke-width="2"/>
+        </svg>
+      </div>
+      <input type="text" id="org-search" placeholder="Search…" />
+      <div id="search-results"></div>
+    </div>
+    
   </div>
 
   <!-- About Section -->
