--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
   </div>
 
   <!-- Locations Section -->
-  <div class="w3-container w3-padding" id="locations">
+  <!-- <div class="w3-container w3-padding" id="locations">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Locations</h3>
   </div>
   <div class="w3-content w3-padding-32" style="max-width:1500px; display:flex; justify-content:center; align-items:center;">
     <iframe style="display:none;" src="//mangomap.com/san-francisco-foundation/maps/4e4f8744-5fd2-11ef-a39b-02af6ed49e2d?preview=true" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen mozallowfullscreen webkitallowfullscreen oallowfullscreen msallowfullscreen width="1500" height="800" onload="this.style.display='block';"></iframe>
-  </div>
+  </div> -->
 
   <!-- Leaflet Map Section -->
   <div id="county-tabs">
@@ -223,7 +223,7 @@
         <button class="w3-button w3-black w3-section" type="submit">SEND MESSAGE</button>
       </form>
     </div>
-    <div class="w3-col 26 m6 w3-margin-bottom" style="display:flex; justify-content:center;">
+    <!-- <div class="w3-col 26 m6 w3-margin-bottom" style="display:flex; justify-content:center;">
       <div class="mangomap-popover-parent-container" style="position:relative;">
         <a href="//mangomap.com/san-francisco-foundation/maps/4e4f8744-5fd2-11ef-a39b-02af6ed49e2d?preview=true" class="mangomap-popover" data-height="800" data-width="1500">
           <div fall-back style="background-image:url(//mangomap.com/assets/icons/preview-not-ready.png); height:360px; width:472px; background-repeat:no-repeat; display:table-cell; vertical-align:middle; background-position:center;">
@@ -232,7 +232,7 @@
         </a>
         <script src="//mangomap.com/assets/stand-alone/mangomap_popup.js" charset="ISO-8859-1"></script>
       </div>
-    </div>
+    </div> -->
   </div>
 
 </div> 
