--- a/index.html
+++ b/index.html
@@ -308,8 +308,8 @@
   <!-- <script src="js/makePinIcon.js"></script>
   <script src="js/loadCounty.js"></script>
   <script src="js/searchLogic.js"></script> -->
-  <script src="js/mapFunctions.js"></script>
-  <script src="js/map.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/miphrae/tara_website@main/js/mapFunctions.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/miphrae/tara_website@main/js/map.js"></script>
 </body>
 
 </html>
