--- a/index.html
+++ b/index.html
@@ -309,8 +309,8 @@
   <script src="js/loadCounty.js"></script>
   <script src="js/searchLogic.js"></script> -->
   <script src="https://cdn.jsdelivr.net/gh/miphrae/tara_website@main/js/mapFunctions.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/miphrae/tara_website@main/js/map.js"></script>
-  
+  <!-- <script src="https://cdn.jsdelivr.net/gh/miphrae/tara_website@main/js/miniMapFunctions.js"></script> -->
+  <script src="map.js"></script>
 </body>
 
 </html>
